<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/find"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@id/action_save"
        android:orderInCategory="99"
        android:title="@string/menu_save"
        app:showAsAction="never" />

    <item
        android:id="@id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_setting"
        app:showAsAction="never" />

    <item
        android:id="@id/action_about"
        android:orderInCategory="101"
        android:title="@string/menu_about"
        app:showAsAction="never" />
</menu>